test/tests/compiler/18_structures/valid/import_and_use/plx1_import_relative.plx
import "../../invalid_lex/get_success"

pub fn main(none) i32 {
    return get_success()
    return 1
}
