test/tests/compiler/18_structures/invalid_lex/plx1_import_missing_quote_2.plx
import get_success"

pub fn main(none) i32 {
    return get_success()
}
